@@ -373,6 +373,7 @@
   - feature: defattr renamed to setdefaultattr (Rudi, 29.12)
   - feature: device spec (list/range/regexp) for most commands implemented
   - feature: %NAME, %EVENT, %TYPE parameters in notify definition
+  - feature: added 93_DbLog.pm, database logging facility (Boris, 30.12.)
 
 - TODO
   emem -2.5kW / getDevData for emwz -1
